# lazyspec

./: .gitignore  .lazyspec.toml  CLAUDE.md  Cargo.toml  README.md  flake.nix  out.txt
.claude/: settings.json
.github/workflows/: ci.yml
.lazyspec/templates/: audit.md
docs/adrs/: ADR-001-single-binary-architecture.md  ADR-002-frontmatter-only-indexing.md  ADR-003-typed-relationships.md  ADR-004-flat-navigation-over-panel-focus.md  ADR-005-git-status-caching-strategy.md
docs/audits/: AUDIT-001-architecture-documentation-review.md  AUDIT-001-example-skill-evidence-based-review.md  AUDIT-002-document-status-consistency-audit.md  AUDIT-003-rfc-027-sqids-implementation-quality-review.md  (+12 more)
examples/: spec-driver.lazyspec.toml
skills/: README.md  create-iteration.md  create-story.md  resolve-context.md  review-iteration.md  write-rfc.md
skills/plan/: SKILL.md
src/: cli.rs  engine.rs  lib.rs  main.rs  tui.rs
tests/: cli_child_context_test.rs  cli_child_test.rs  cli_completions_test.rs  cli_context_test.rs  cli_convention_test.rs  cli_create_test.rs  cli_expanded_validate_test.rs  cli_fix_cascade_test.rs  cli_fix_renumber_test.rs  cli_fix_test.rs  cli_ignore_test.rs  cli_init_test.rs  cli_json_test.rs  cli_link_test.rs  cli_mutate_test.rs  cli_query_test.rs  cli_status_test.rs  cli_validate_test.rs  config_test.rs  create_spec_test.rs  document_test.rs  expand_refs_test.rs  reservation_test.rs  rewrite_frontmatter_test.rs  spec_ac_validation_test.rs  spec_ref_validation_test.rs  spec_type_test.rs  sqids_numbering_test.rs  store_test.rs  tui_agent_dialog_test.rs  tui_agent_management_test.rs  tui_agent_test.rs  tui_create_form_test.rs  tui_delete_dialog_test.rs  tui_diagram_test.rs  tui_editor_test.rs  tui_filters_test.rs  tui_fullscreen_test.rs  tui_git_status.rs  tui_graph_test.rs  (+15 more)
(+535 files in other folders)
