[package]
name = "lazyspec"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tui-markdown = "0.3"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
anyhow = "1"
serde_json = "1"
console = "0.15"

[dev-dependencies]
tempfile = "3"
